--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,29 +1,159 @@
 <!DOCTYPE html>
 <html lang="pt-Br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Videos pornô gratuitos - XVIDEOS.COM</title>
-    <link
-     rel="shortcut icon" href="https://static-cdn77.xvideos-cdn.com/v3/img/skins/default/logo/xv.white.180.png" 
-     type="image/x-icon"
-     />
-    <link rel="stylesheet" href="/front-end/assets/css/main.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <title>TubVideo - Vídeos de south park</title>
+    <link rel="shortcut icon" href="https://static-cdn77.xvideos-cdn.com/v3/img/skins/default/logo/xv.white.180.png"
+        type="image/x-icon" />
+    <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <script src="./assets/js/index.js"></script>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap&subset=latin-ext" rel="stylesheet">
 </head>
-<body>
+
+<body class="body"data-spy="scroll" data-target=".fixed-top">
+
     <header>
-        <img 
-        class="logo" src="https://static-cdn77.xvideos-cdn.com/v3/img/skins/default/logo/xvideos.white.svg" alt="xvideos"
-        />
-        <nav class="menu">
-            <ul>
-                <li>Idioma: </li>
-                <li><i class="fa-solid fa-location-dot">:</i>Brasil</li>
-                <li>Heterossexual</li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span><i class="bi bi-list icon-size"></i></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Início</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/LESS14/TubeVideo"
+                                target="_blank">Código-fonte</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./login.php"><i class="fa fa-right-to-bracket"></i> Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
+
+    <section class="header__info">
+        <div class="header__info title">
+            <h3 class="text-dark text-align-center h3">Bem-vindo ao <strong>TubeVideos</strong>!</h3>
+            <p class="p-heading">Aqui você encontrará os melhores vídeos de south-park!</p>
+        </div>
+    </section>
+
+    <section class="pb-5 pt-5">
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-md-4">
+                    <div class="row mb-3 mb-md-0">
+                        <div class="col-2 text-center text-cta-color pr-0"></div>
+                        <div class="col-10 pl-0">
+                            <div class="text-center"><i class="fa fa-poo icon-size animate" style="font-size:34pt"></i>
+                                <h4 class="h5">Aplicação feita na brincadeira</h4>
+                                <p>Essa aplicação foi feita na zoeira em 2 horas. Então não espere muito!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row mb-3 mb-md-0 px-5">
+                        <div class="col-2 text-center text-cta-color pr-0"></div>
+                        <div class="col-10 pl-0 text-center"><i class="fa fa-shield px-5 text-center animate"
+                                style="font-size:34pt"></i>
+                            <h4 class="h5 text-center px-5">Segurança</h4>
+                            <p>Quem se preocupa com segurança em 2 horas?!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="row mb-3 mb-md-0 p-3">
+                        <div class="col-2 text-cta-color pr-0"></div>
+                        <div class="col-10 pl-0">
+                            <div class="text-center"><i class="fas fa-thumbs-down text-center animate"
+                                    style="font-size:34pt"></i>
+                                <h4 class="h5">Qualidade</h4>
+                                <p>Qualidade dúvidosa, mas compreensível por ser algo feito em duas horas!!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="services__info">
+        <div class="services__info title">
+            <h3 class="text-dark h3">A aplicação</h3>
+        </div>
+
+        <p class="text-center">
+            A aplicação é uma cópia do Xvidros(Sim, aquele site que vende vidros *Confia*) só que invés de Mia Khalifa temos Erick Cartman!
+        </p>
+        <div class="button-enter">
+        <button type="button" class="btn btn-outline-danger"><i class="fa fa-right-to-bracket"></i> Faça já seu login!</button>
+    </div>
+    </section>
+
+    <div class="footer p-5 bg-light text-align-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="footer-col first">
+                        <h4>TubiVideos</h4>
+                        <p>O melhor lugar para assistir South-park!</p>
+                    </div>
+                </div>
+                <div class="col-md-4"></div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <div class="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <a class="text-reset" href="https://github.com/LESS14/TubeVideo" target="_blank" title="Ver código-fonte no Github"><i class="fab fa-github icon-small"></i></a>
+                    <a class="text-reset" href="https://discord.gg/Ksaw4Uf2mN" target="_blank" title="Server do Discord"><i class="fab fa-discord icon-small p-2"></i></a>
+                    <p><small class="p-small">&copy; 2023-2023 TubiVideos</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <script>
+        $(document).ready(function () { $(".navbar-toggler").click(function () { $(".navbar-toggler").hasClass("collapsed") ? ($(".navbar-toggler .bi").removeClass("bi-x"), $(".navbar-toggler .bi").addClass("bi-list")) : ($(".navbar-toggler  .bi").removeClass("bi-list"), $(".navbar-toggler  .bi").addClass("bi-x")) }) })    
+    </script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
+    
+    <script src="./jquery.min.js"></script>
+    <script src="./popper.min.js"></script>
+    <script src="./bootstrap.min.js"></script>
+    <script src="./jquery.easing.min.js"></script>
+    <script src="./swiper.min.js"></script>
+    <script src="./jquery.magnific-popup.js"></script>
+    <script src="./scripts.js"></script>
 </body>
+
 </html>
