--- a/front-end/index.html
+++ b/front-end/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TubVideo - Vídeos de south park</title>
+    <title>TubeVideo - Vídeos de south park</title>
     <link rel="shortcut icon" href="https://static-cdn77.xvideos-cdn.com/v3/img/skins/default/logo/xv.white.180.png"
         type="image/x-icon" />
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -39,7 +39,7 @@
                                 target="_blank">Código-fonte</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./login.php"><i class="fa fa-right-to-bracket"></i> Login</a>
+                            <a class="nav-link" href="#" onclick='alert("Infelizmente o Github não permite rodar PHP por segurança, portanto para usar este site você terá que baixar do repositório do Github e hospedá-lo em seu localhost.");'><i class="fa fa-right-to-bracket"></i> Login</a>
                         </li>
                     </ul>
                 </div>
