--- a/front-end/index.html
+++ b/front-end/index.html
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">TubeVideo</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
