--- a/front-end/index.html
+++ b/front-end/index.html
@@ -107,7 +107,7 @@
     </div>
     </section>
 
-    <div class="footer p-5 bg-light text-align-center">
+    <div class="footer p-css bg-light text-align-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
